--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "demo": "tsx cli/demo.ts",
+    "demo": "tsx scripts/demo.ts",
+    "demo:full": "tsx cli/demo.ts",
     "try": "tsx cli/try-it.ts",
     "test": "vitest",
     "test:e2e": "tsx scripts/test-e2e.ts",
